# tg_reposter

./: README.md  pyproject.toml  requirements.txt
src/: config.ini  history_manager.py  log_setup.py  main.py  sent_posts.json  settings.py  telegram_handler.py
